# unifi_assist

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.yml  CHANGELOG.md  PLAN.md  README.md  package.json  pyproject.toml  test.py
.github/workflows/: release.yml
.pre-commit-hooks/: check_hook_updates.py
api_spec/: network_api.json
scripts/: capture_examples.py
src/unifi_assist/: __init__.py  client.py  logging.py
tests/: test_client.py
unifi_assist/: client.py  example-usage.py  logging.py
